--- a/CSS/bg.html
+++ b/CSS/bg.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         body {
-            background-color: #ffdd87;
+            background-color: #577822;
             /* background-image: 
                 url('https://picsum.photos/id/91/600/600'),
                 url('https://picsum.photos/id/21/600/600'); */
@@ -29,14 +29,42 @@
                 contain 等比例符合
                 cover 等比例填滿
             */
+
+            background-blend-mode: lighten;
+            /* 
+                混合模式
+                screen      濾色(去黑留白)
+                multiply    色彩增值(去白留黑)
+                overlay     覆蓋
+                darken      變暗
+                lighten     變亮
+                color       顏色
+                luminosity  明度
+                hue         色相
+                soft-light  柔光
+                hard-light  實光
+                color-burn  加深顏色
+                color-dodge 加亮顏色
+                exclusion   排除
+                difference  差異化
+                saturation  飽合度
+            */
         }
         h1 {
+            font-size: 100px;
+            text-align: center;
             background-color: #fe4665;
+            /* background-image: url('https://picsum.photos/id/76/800'); */
+            background-image: linear-gradient(to left,red,orange,yellow,green,blue,purple);
+            background-clip: text;
+            color: transparent;
+            background-size: cover;
+            font-weight: 900;
         }
     </style>
 </head>
 <body>
-    <h1>背景樣式</h1>
+    <h1>背景樣式123asdfasdfa</h1>
     <p>
         範圍發貼就是蒐集asdf 階段危險性別數字安全戰士接着尷尬和平島asdf哪個，指南圖文神秘專業大家都福州，成為先後呼吸爸爸當時壓力競爭力算是，絶對舉報，當然三個興趣吸引飛機治理執行時間我也我是都說為此電器精英，體系團體離線無門，多少全球放在姐姐經asdf 過一年軟體具備努力獲取聲音求購，立即團隊學術主任說了表明過了，紀念情asdf 況配合開放門口轉移宣佈，理解企業只是工業命asdf asdfas d 運過程這樣是一種我在讓你圖文，作品模樣asdf 讓人主演宅宅味道管理系統因為同志報名進了，確定政治最新黑暗風雲浙江公主可愛招標上面，加上昨天在於監管字元，手中我現在維持體。
     </p>
