--- a/CSS/box-model.html
+++ b/CSS/box-model.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        /* 萬用選取器 */
+        * {
+            box-sizing: border-box;
+        }
         .box {
             background-color: #ccc;
             width: 200px;
@@ -23,7 +27,7 @@
             text-align: justify;
 
             /* padding 內距 */
-            /* padding: 30px; */
+            padding: 20px;
 
             /* padding-left: ; */
             /* padding-right: ; */
@@ -105,6 +109,10 @@
             inline沒有width,height,上下padding,上下margin
             inline只有左右padding,左右margin
         */
+        /* 
+            元素總寬度 = width + border + padding
+        */
+        
     </style>
 </head>
 <body>
