--- a/CSS/flex-2.html
+++ b/CSS/flex-2.html
@@ -9,9 +9,11 @@
             box-sizing: border-box;
         }
         .container {
-            min-height: 600px;
+            min-height: 1600px;
             display: flex;
             background-color: #f0adad;
+            flex-wrap: wrap;
+
 
             flex-direction: row;
 
@@ -25,6 +27,12 @@
             /* 
                 start, center, end
                 stretch, baseline
+            */
+
+            align-content: space-evenly;
+            /* 
+                start, center, end
+                space-between, space-around, space-evenly
             */
         }
         .box {
@@ -63,7 +71,31 @@
             </p>
         </div>
         <div class="box">
-            <h2>title3</h2>
+            <h2>title4</h2>
+            <p>
+                Lorem,ng elit. Quaeratnatem delectus cumque. Quasi dolorum soluta tempore sed ullam, odio est? Quibusdam, temporibus perspiciatis.
+            </p>
+        </div>
+        <div class="box">
+            <h2>title5</h2>
+            <p>
+                Lorem,ng elit. Quaeratnatem delectus cumque. Quasi dolorum soluta tempore sed ullam, odio est? Quibusdam, temporibus perspiciatis.
+            </p>
+        </div>
+        <div class="box">
+            <h2>title6</h2>
+            <p>
+                Lorem,ng elit. Quaeratnatem delectus cumque. Quasi dolorum soluta tempore sed ullam, odio est? Quibusdam, temporibus perspiciatis.
+            </p>
+        </div>
+        <div class="box">
+            <h2>title7</h2>
+            <p>
+                Lorem,ng elit. Quaeratnatem delectus cumque. Quasi dolorum soluta tempore sed ullam, odio est? Quibusdam, temporibus perspiciatis.
+            </p>
+        </div>
+        <div class="box">
+            <h2>title8</h2>
             <p>
                 Lorem,ng elit. Quaeratnatem delectus cumque. Quasi dolorum soluta tempore sed ullam, odio est? Quibusdam, temporibus perspiciatis.
             </p>
