--- a/CSS/layout-1.html
+++ b/CSS/layout-1.html
@@ -9,12 +9,16 @@
     <link rel="stylesheet" href="custom.css">
 </head>
 <body>
-    <h1>哈囉你好</h1>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, facere praesentium ex autem eum quod iusto rem veniam sed nesciunt magni esse enim consectetur voluptates quaerat quisquam sint consequuntur eius.
-    </p>
-    <p>
-        實行都要解壓崇拜大賽特別愛情同時，發達結婚主動創造承諾坐在，主要選擇之後不可最為參觀竟然輕輕定義，開了這就是本文前面上下好多技術對方請教現實，高手市場價五年水果語言充滿加大什麼樣討論依靠道德深刻成熟排名，明天感染成長因為危險反映你怎麼，仍然一步記憶實驗爸。
-    </p>
+    <nav>
+        <a href="#" class="nav-logo">Logo</a>
+        <div class="nav-menu">
+            <a href="#" class="nav-link">Link</a>
+            <a href="#" class="nav-link">Link</a>
+            <a href="#" class="nav-link">Link</a>
+        </div>
+        <div class="nav-menu ">
+            <a href="#" class="nav-link">Login</a>
+        </div>
+    </nav>
 </body>
 </html>
