--- a/CSS/layout-1.html
+++ b/CSS/layout-1.html
@@ -20,5 +20,12 @@
             <a href="#" class="nav-link">Login</a>
         </div>
     </nav>
+    <header>
+        <img src="https://picsum.photos/id/83/1600/1000" alt="" class="cover">
+        <div class="header-content">
+            <h1>HELLO</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, expedita.</p>
+        </div>
+    </header>
 </body>
 </html>
