--- a/CSS/layout-1.html
+++ b/CSS/layout-1.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="variable.css">
     <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="grid.css">
     <link rel="stylesheet" href="custom.css">
 </head>
 <body>
@@ -27,5 +28,27 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, expedita.</p>
         </div>
     </header>
+    <section>
+        <div class="container row">
+            <div class="col">
+                <h3>title</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia odio, nam rerum quas blanditiis voluptas quisquam delectus veniam eius incidunt enim consequuntur sapiente sunt necessitatibus et doloremque veritatis cupiditate. Ex.
+                </p>
+            </div>
+            <div class="col">
+                <h3>title</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia odio, nam rerum quas blanditiis voluptas quisquam delectus veniam eius incidunt enim consequuntur sapiente sunt necessitatibus et doloremque veritatis cupiditate. Ex.
+                </p>
+            </div>
+            <div class="col">
+                <h3>title</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia odio, nam rerum quas blanditiis voluptas quisquam delectus veniam eius incidunt enim consequuntur sapiente sunt necessitatibus et doloremque veritatis cupiditate. Ex.
+                </p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
