--- a/CSS/layout-1.html
+++ b/CSS/layout-1.html
@@ -28,42 +28,27 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, expedita.</p>
         </div>
     </header>
-    <section>
+    <section id="about">
         <div class="container row">
-            <div class="col-3">
+            <div class="col-12">
+                <h2>About</h2>
+            </div>
+            <div class="col-4">
                 <h3>title</h3>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia odio, nam rerum quas blanditiis voluptas quisquam delectus veniam eius incidunt enim consequuntur sapiente sunt necessitatibus et doloremque veritatis cupiditate. Ex.
-                </p>
-            </div>
-            <div class="col-3">
-                <h3>title</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia odio, nam rerum quas blanditiis voluptas quisquam delectus veniam eius incidunt enim consequuntur sapiente sunt necessitatibus et doloremque veritatis cupiditate. Ex.
-                </p>
-            </div>
-            <div class="col-3">
-                <h3>title</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia odio, nam rerum quas blanditiis voluptas quisquam delectus veniam eius incidunt enim consequuntur sapiente sunt necessitatibus et doloremque veritatis cupiditate. Ex.
-                </p>
-            </div>
-            <div class="col-3">
-                <h3>title</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia odio, nam rerum quas blanditiis voluptas quisquam delectus veniam eius incidunt enim consequuntur sapiente sunt necessitatibus et doloremque veritatis cupiditate. Ex.
-                </p>
-            </div>
-            <div class="col-8">
-                <h3>title</h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore repellendus dolorum ipsa totam maxime harum ipsam est rerum similique vel veniam, modi numquam cumque quia ullam nulla adipisci unde ipsum?
                 </p>
             </div>
             <div class="col-4">
                 <h3>title</h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum exercitationem numquam placeat culpa repellat sed molestias officia nulla et est!
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia odio, nam rerum quas blanditiis voluptas quisquam delectus veniam eius incidunt enim consequuntur sapiente sunt necessitatibus et doloremque veritatis cupiditate. Ex.
+                </p>
+            </div>
+            <div class="col-4">
+                <h3>title</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia odio, nam rerum quas blanditiis voluptas quisquam delectus veniam eius incidunt enim consequuntur sapiente sunt necessitatibus et doloremque veritatis cupiditate. Ex.
                 </p>
             </div>
         </div>
