--- a/CSS/layout-1.html
+++ b/CSS/layout-1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="stylesheet" href="variable.css">
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="grid.css">
@@ -34,18 +35,21 @@
                 <h2>About</h2>
             </div>
             <div class="col-4">
+                <i class="fa-solid fa-pen-nib fa-4x"></i>
                 <h3>title</h3>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia odio, nam rerum quas blanditiis voluptas quisquam delectus veniam eius incidunt enim consequuntur sapiente sunt necessitatibus et doloremque veritatis cupiditate. Ex.
                 </p>
             </div>
             <div class="col-4">
+                <i class="fa-brands fa-codepen fa-4x"></i>
                 <h3>title</h3>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia odio, nam rerum quas blanditiis voluptas quisquam delectus veniam eius incidunt enim consequuntur sapiente sunt necessitatibus et doloremque veritatis cupiditate. Ex.
                 </p>
             </div>
             <div class="col-4">
+                <i class="fa-solid fa-star-of-david fa-4x"></i>
                 <h3>title</h3>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia odio, nam rerum quas blanditiis voluptas quisquam delectus veniam eius incidunt enim consequuntur sapiente sunt necessitatibus et doloremque veritatis cupiditate. Ex.
