--- a/CSS/layout-1.html
+++ b/CSS/layout-1.html
@@ -34,26 +34,38 @@
             <div class="col-12">
                 <h2>About</h2>
             </div>
-            <div class="col-4">
-                <i class="fa-solid fa-pen-nib fa-4x"></i>
-                <h3>title</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia odio, nam rerum quas blanditiis voluptas quisquam delectus veniam eius incidunt enim consequuntur sapiente sunt necessitatibus et doloremque veritatis cupiditate. Ex.
-                </p>
+            <div class="col-4 row">
+                <div class="col-3">
+                    <i class="fa-solid fa-pen-nib fa-3x"></i>
+                </div>
+                <div class="col-9 padding-0">
+                    <h3>title</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem unde laboriosam maxime non voluptatem laborum.
+                    </p>
+                </div>
             </div>
-            <div class="col-4">
-                <i class="fa-brands fa-codepen fa-4x"></i>
-                <h3>title</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia odio, nam rerum quas blanditiis voluptas quisquam delectus veniam eius incidunt enim consequuntur sapiente sunt necessitatibus et doloremque veritatis cupiditate. Ex.
-                </p>
+            <div class="col-4 row">
+                <div class="col-3">
+                    <i class="fa-brands fa-codepen fa-3x"></i>
+                </div>
+                <div class="col-9 padding-0">
+                    <h3>title</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti dolorum quis architecto eveniet magnam saepe!
+                    </p>
+                </div>
             </div>
-            <div class="col-4">
-                <i class="fa-solid fa-star-of-david fa-4x"></i>
-                <h3>title</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia odio, nam rerum quas blanditiis voluptas quisquam delectus veniam eius incidunt enim consequuntur sapiente sunt necessitatibus et doloremque veritatis cupiditate. Ex.
-                </p>
+            <div class="col-4 row">
+                <div class="col-3">
+                    <i class="fa-solid fa-star-of-david fa-3x"></i>
+                </div>
+                <div class="col-9 padding-0">
+                    <h3>title</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque tempora nam aliquid dolorem provident itaque.
+                    </p>
+                </div>
             </div>
         </div>
     </section>
