--- a/CSS/layout-1.html
+++ b/CSS/layout-1.html
@@ -69,5 +69,23 @@
             </div>
         </div>
     </section>
+    <section id="service">
+        <div class="container row">
+            <div class="col-6">
+                <div>
+                    <img src="https://picsum.photos/id/45/600" alt="">
+                </div>
+            </div>
+            <div class="col-6">
+                <div>
+                    <h3>Service 1</h3>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione optio eveniet dignissimos, nemo iusto magni inventore possimus a voluptatem aperiam excepturi architecto corporis ad et quaerat quod, sunt aliquam alias.
+                    </p>
+                    <a href="#">Link</a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
