--- a/CSS/layout-1.html
+++ b/CSS/layout-1.html
@@ -77,10 +77,12 @@
                 </div>
             </div>
             <div class="col-6">
-                <div>
+                <div class="service-content">
                     <h3>Service 1</h3>
                     <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione optio eveniet dignissimos, nemo iusto magni inventore possimus a voluptatem aperiam excepturi architecto corporis ad et quaerat quod, sunt aliquam alias.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis suscipit atque ut!
+      
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum velit tempore minus libero tempora quas.
                     </p>
                     <a href="#">Link</a>
                 </div>
