--- a/CSS/layout-1.html
+++ b/CSS/layout-1.html
@@ -88,6 +88,24 @@
                 </div>
             </div>
         </div>
+        <div class="container row">
+            <div class="col-6">
+                <div>
+                    <img src="https://picsum.photos/id/95/600" alt="">
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="service-content">
+                    <h3>Service 2</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis suscipit atque ut!
+      
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum velit tempore minus libero tempora quas.
+                    </p>
+                    <a href="#">Link</a>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
