--- a/CSS/layout-1.html
+++ b/CSS/layout-1.html
@@ -71,6 +71,9 @@
     </section>
     <section id="service">
         <div class="container row">
+            <div class="col-12">
+                <h2>Service</h2>
+            </div>
             <div class="col-6">
                 <div>
                     <img src="https://picsum.photos/id/45/600" alt="">
@@ -84,7 +87,7 @@
       
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum velit tempore minus libero tempora quas.
                     </p>
-                    <a href="#">Link</a>
+                    <a href="#" class="btn btn-amber">Link</a>
                 </div>
             </div>
         </div>
@@ -102,7 +105,7 @@
       
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum velit tempore minus libero tempora quas.
                     </p>
-                    <a href="#">Link</a>
+                    <a href="#" class="btn btn-amber">Link</a>
                 </div>
             </div>
         </div>
