--- a/CSS/layout-1.html
+++ b/CSS/layout-1.html
@@ -87,7 +87,7 @@
       
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum velit tempore minus libero tempora quas.
                     </p>
-                    <a href="#" class="btn btn-amber">Link</a>
+                    <a href="#" class="btn btn-blue">Link</a>
                 </div>
             </div>
         </div>
