--- a/CSS/layout-1.html
+++ b/CSS/layout-1.html
@@ -110,5 +110,75 @@
             </div>
         </div>
     </section>
+    <section id="folio">
+        <div class="container row">
+            <div class="col-2">
+                <a href="#">
+                    <figure>
+                        <img src="https://picsum.photos/id/91/800/600" alt="">
+                        <figcaption>
+                            title
+                        </figcaption>
+                    </figure>
+                </a>
+
+            </div>
+            <div class="col-2">
+                <a href="#">
+                    <figure>
+                        <img src="https://picsum.photos/id/96/800/600" alt="">
+                        <figcaption>
+                            title
+                        </figcaption>
+                    </figure>
+                </a>
+
+            </div>
+            <div class="col-2">
+                <a href="#">
+                    <figure>
+                        <img src="https://picsum.photos/id/95/800/600" alt="">
+                        <figcaption>
+                            title
+                        </figcaption>
+                    </figure>
+                </a>
+
+            </div>
+            <div class="col-2">
+                <a href="#">
+                    <figure>
+                        <img src="https://picsum.photos/id/94/800/600" alt="">
+                        <figcaption>
+                            title
+                        </figcaption>
+                    </figure>
+                </a>
+
+            </div>
+            <div class="col-2">
+                <a href="#">
+                    <figure>
+                        <img src="https://picsum.photos/id/93/800/600" alt="">
+                        <figcaption>
+                            title
+                        </figcaption>
+                    </figure>
+                </a>
+
+            </div>
+            <div class="col-2">
+                <a href="#">
+                    <figure>
+                        <img src="https://picsum.photos/id/92/800/600" alt="">
+                        <figcaption>
+                            title
+                        </figcaption>
+                    </figure>
+                </a>
+
+            </div>
+        </div>
+    </section>
 </body>
 </html>
