--- a/CSS/layout-1.html
+++ b/CSS/layout-1.html
@@ -111,7 +111,7 @@
         </div>
     </section>
     <section id="folio">
-        <div class="container row">
+        <div class="container row no-padding">
             <div class="col-2">
                 <a href="#">
                     <figure>
