--- a/CSS/layout-1.html
+++ b/CSS/layout-1.html
@@ -111,7 +111,78 @@
         </div>
     </section>
     <section id="folio">
+        <div class="container row">
+            <div class="col-12">
+                <h2>Folio</h2>
+            </div>
+        </div>
         <div class="container row no-padding">
+            <div class="col-2">
+                <a href="#">
+                    <figure>
+                        <img src="https://picsum.photos/id/91/800/600" alt="">
+                        <figcaption>
+                            title
+                        </figcaption>
+                    </figure>
+                </a>
+
+            </div>
+            <div class="col-2">
+                <a href="#">
+                    <figure>
+                        <img src="https://picsum.photos/id/96/800/600" alt="">
+                        <figcaption>
+                            title
+                        </figcaption>
+                    </figure>
+                </a>
+
+            </div>
+            <div class="col-2">
+                <a href="#">
+                    <figure>
+                        <img src="https://picsum.photos/id/95/800/600" alt="">
+                        <figcaption>
+                            title
+                        </figcaption>
+                    </figure>
+                </a>
+
+            </div>
+            <div class="col-2">
+                <a href="#">
+                    <figure>
+                        <img src="https://picsum.photos/id/94/800/600" alt="">
+                        <figcaption>
+                            title
+                        </figcaption>
+                    </figure>
+                </a>
+
+            </div>
+            <div class="col-2">
+                <a href="#">
+                    <figure>
+                        <img src="https://picsum.photos/id/93/800/600" alt="">
+                        <figcaption>
+                            title
+                        </figcaption>
+                    </figure>
+                </a>
+
+            </div>
+            <div class="col-2">
+                <a href="#">
+                    <figure>
+                        <img src="https://picsum.photos/id/92/800/600" alt="">
+                        <figcaption>
+                            title
+                        </figcaption>
+                    </figure>
+                </a>
+
+            </div>
             <div class="col-2">
                 <a href="#">
                     <figure>
@@ -180,5 +251,8 @@
             </div>
         </div>
     </section>
+    <footer>
+        COPYRIGHTS&copy;All Rights Reserved
+    </footer>
 </body>
 </html>
