--- a/CSS/layout-1.html
+++ b/CSS/layout-1.html
@@ -14,9 +14,9 @@
     <nav>
         <a href="#" class="nav-logo">Logo</a>
         <div class="nav-menu">
-            <a href="#" class="nav-link">Link</a>
-            <a href="#" class="nav-link">Link</a>
-            <a href="#" class="nav-link">Link</a>
+            <a href="#about" class="nav-link">About</a>
+            <a href="#service" class="nav-link">Service</a>
+            <a href="#folio" class="nav-link">Folio</a>
         </div>
         <div class="nav-menu ">
             <a href="#" class="nav-link">Login</a>
