--- a/RWD/basic.html
+++ b/RWD/basic.html
@@ -20,11 +20,11 @@
             }
         }
 
-        @media(min-width: 600px)and (max-width:800px){
+        /* @media(min-width: 600px)and (max-width:800px){
             body {
                 background-color: #098;
             }
-        }
+        } */
 
         /* @media(max-width: 1200px){
             body {
