--- a/CSS/layout-1.html
+++ b/CSS/layout-1.html
@@ -34,33 +34,33 @@
             <div class="col-12">
                 <h2>About</h2>
             </div>
-            <div class="col-4 row">
-                <div class="col-3">
+            <div class="col-md-4 col-12 row">
+                <div class="col-3 col-md-12">
                     <i class="fa-solid fa-pen-nib fa-3x"></i>
                 </div>
-                <div class="col-9 padding-0">
+                <div class="col-9 col-md-12 padding-0">
                     <h3>title</h3>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem unde laboriosam maxime non voluptatem laborum.
                     </p>
                 </div>
             </div>
-            <div class="col-4 row">
-                <div class="col-3">
+            <div class="col-md-4 col-12 row">
+                <div class="col-3 col-md-12">
                     <i class="fa-brands fa-codepen fa-3x"></i>
                 </div>
-                <div class="col-9 padding-0">
+                <div class="col-9 col-md-12 padding-0">
                     <h3>title</h3>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti dolorum quis architecto eveniet magnam saepe!
                     </p>
                 </div>
             </div>
-            <div class="col-4 row">
-                <div class="col-3">
+            <div class="col-md-4 col-12 row">
+                <div class="col-3 col-md-12">
                     <i class="fa-solid fa-star-of-david fa-3x"></i>
                 </div>
-                <div class="col-9 padding-0">
+                <div class="col-9 col-md-12 padding-0">
                     <h3>title</h3>
                     <p>
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque tempora nam aliquid dolorem provident itaque.
