--- a/CSS/layout-1.html
+++ b/CSS/layout-1.html
@@ -29,7 +29,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, expedita.</p>
         </div>
     </header>
-    <section id="about">
+    <section id="about" class="text-md-center">
         <div class="container row">
             <div class="col-12">
                 <h2>About</h2>
