--- a/CSS/layout-1.html
+++ b/CSS/layout-1.html
@@ -74,12 +74,12 @@
             <div class="col-12">
                 <h2>Service</h2>
             </div>
-            <div class="col-6">
+            <div class="col-md-6 col-8">
                 <div>
                     <img src="https://picsum.photos/id/45/600" alt="">
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-md-6 col-10">
                 <div class="service-content">
                     <h3>Service 1</h3>
                     <p>
