--- a/CSS/layout-1.html
+++ b/CSS/layout-1.html
@@ -92,12 +92,12 @@
             </div>
         </div>
         <div class="container row">
-            <div class="col-6">
+            <div class="col-md-6 col-8 order-md-2" style="margin-left: auto">
                 <div>
                     <img src="https://picsum.photos/id/95/600" alt="">
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-md-6 col-8 order-md-1">
                 <div class="service-content">
                     <h3>Service 2</h3>
                     <p>
