--- a/CSS/layout-1.html
+++ b/CSS/layout-1.html
@@ -117,7 +117,7 @@
             </div>
         </div>
         <div class="container row no-padding">
-            <div class="col-2">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                 <a href="#">
                     <figure>
                         <img src="https://picsum.photos/id/91/800/600" alt="">
@@ -128,7 +128,7 @@
                 </a>
 
             </div>
-            <div class="col-2">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                 <a href="#">
                     <figure>
                         <img src="https://picsum.photos/id/96/800/600" alt="">
@@ -139,7 +139,7 @@
                 </a>
 
             </div>
-            <div class="col-2">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                 <a href="#">
                     <figure>
                         <img src="https://picsum.photos/id/95/800/600" alt="">
@@ -150,7 +150,7 @@
                 </a>
 
             </div>
-            <div class="col-2">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                 <a href="#">
                     <figure>
                         <img src="https://picsum.photos/id/94/800/600" alt="">
@@ -161,7 +161,7 @@
                 </a>
 
             </div>
-            <div class="col-2">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                 <a href="#">
                     <figure>
                         <img src="https://picsum.photos/id/93/800/600" alt="">
@@ -172,7 +172,7 @@
                 </a>
 
             </div>
-            <div class="col-2">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                 <a href="#">
                     <figure>
                         <img src="https://picsum.photos/id/92/800/600" alt="">
@@ -183,7 +183,7 @@
                 </a>
 
             </div>
-            <div class="col-2">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                 <a href="#">
                     <figure>
                         <img src="https://picsum.photos/id/91/800/600" alt="">
@@ -194,7 +194,7 @@
                 </a>
 
             </div>
-            <div class="col-2">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                 <a href="#">
                     <figure>
                         <img src="https://picsum.photos/id/96/800/600" alt="">
@@ -205,7 +205,7 @@
                 </a>
 
             </div>
-            <div class="col-2">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                 <a href="#">
                     <figure>
                         <img src="https://picsum.photos/id/95/800/600" alt="">
@@ -216,7 +216,7 @@
                 </a>
 
             </div>
-            <div class="col-2">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                 <a href="#">
                     <figure>
                         <img src="https://picsum.photos/id/94/800/600" alt="">
@@ -227,7 +227,7 @@
                 </a>
 
             </div>
-            <div class="col-2">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                 <a href="#">
                     <figure>
                         <img src="https://picsum.photos/id/93/800/600" alt="">
@@ -238,7 +238,7 @@
                 </a>
 
             </div>
-            <div class="col-2">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                 <a href="#">
                     <figure>
                         <img src="https://picsum.photos/id/92/800/600" alt="">
