--- a/CSS/layout-1.html
+++ b/CSS/layout-1.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="custom.css">
 </head>
 <body>
-    <nav>
+    <!-- 桌機版選單 -->
+    <nav class="desktop-nav">
         <a href="#" class="nav-logo">Logo</a>
         <div class="nav-menu">
             <a href="#about" class="nav-link">About</a>
@@ -21,6 +22,11 @@
         <div class="nav-menu ">
             <a href="#" class="nav-link">Login</a>
         </div>
+    </nav>
+    <!-- 手機版選單 -->
+    <nav class="mobile-nav">
+        <a href="#" class="nav-logo">Logo</a>
+        <a href="#" class="nav-toggle"><i class="fa-solid fa-bars fa-xl"></i></a>
     </nav>
     <header>
         <img src="https://picsum.photos/id/83/1600/1000" alt="" class="cover">
