--- a/JAVASCRIPT/tabs.html
+++ b/JAVASCRIPT/tabs.html
@@ -44,11 +44,30 @@
             background-color: #ffe6a1;
             position: absolute;
             width: 100%;
-            display: none;
+            /* display: none; */
+
+            opacity: 0;
+            visibility: hidden;
+            transition: all 1200ms;
         }
 
         .tab-panel.active {
-            display: block;
+            /* display: block; */
+            /* animation: tab-in 600ms; */
+
+            opacity: 1;
+            visibility: visible;
+        }
+
+        @keyframes tab-in {
+            from {
+                opacity: 0;
+                transform: translateY(15px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
     </style>
 </head>
@@ -92,15 +111,38 @@
     </div>
     <script>
         let tab_links = document.querySelectorAll('.tab-link');
+        // for(let tab_link of tab_links){
+        //     tab_link.onclick = function(){
+        //         let href = this.getAttribute('href');
+        //         let panel = this.dataset.panel;
+        //         document.querySelector('.tab-panel.active').classList.remove('active');
+        //         document.querySelector(panel).classList.add('active');
+
+        //         document.querySelector('.tab-link.active').classList.remove('active');
+        //         this.classList.add('active');
+        //     }
+        // }
+        // for(let tab_link of tab_links){
+        //     tab_link.onclick = function(e){
+        //         let href = e.target.getAttribute('href');
+        //         let panel = e.target.dataset.panel;
+        //         document.querySelector('.tab-panel.active').classList.remove('active');
+        //         document.querySelector(panel).classList.add('active');
+
+        //         document.querySelector('.tab-link.active').classList.remove('active');
+        //         e.target.classList.add('active');
+        //     }
+        // }
         for(let tab_link of tab_links){
-            tab_link.onclick = function(){
-                let href = this.getAttribute('href');
-                let panel = this.dataset.panel;
+            tab_link.onclick = (event) => {
+                // console.log(event);
+                let href = event.target.getAttribute('href');
+                let panel = event.target.dataset.panel;
                 document.querySelector('.tab-panel.active').classList.remove('active');
                 document.querySelector(panel).classList.add('active');
 
                 document.querySelector('.tab-link.active').classList.remove('active');
-                this.classList.add('active');
+                event.target.classList.add('active');
             }
         }
     </script>
