--- a/JAVASCRIPT/slider.html
+++ b/JAVASCRIPT/slider.html
@@ -122,7 +122,7 @@
         let sliderItems = document.querySelectorAll('.slider-item'); 
         let total = sliderItems.length;
         let currentIndex = 0;
-        let timeout = 6000;
+        let timeout = 2000;
         let next = document.querySelector('.slider-next');
         let prev = document.querySelector('.slider-prev');
 
@@ -183,7 +183,7 @@
         
         // 
         const activeDot = e => {
-            currentIndex = e.target.dataset.index;
+            currentIndex = Number(e.target.dataset.index);
             switchImage();
             switchDot();
             resetTimer();
