--- a/JAVASCRIPT/slider.html
+++ b/JAVASCRIPT/slider.html
@@ -89,6 +89,26 @@
         .slider-dot.active {
             background-color: #2c6fff;
         }
+        .slider-content {
+            width: 400px;
+            height: fit-content;
+            background-color: #ffffff67;
+            border-radius: 15px;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            margin: auto;
+            padding: 30px;
+            backdrop-filter: blur(8px);
+        }
+        .slider-item:nth-of-type(odd)  .slider-content{
+            left: 50%;
+        }
+        .slider-item:nth-of-type(even)  .slider-content{
+            right: 50%;
+        }
     </style>
 </head>
 
@@ -96,21 +116,57 @@
     <div class="slider">
         <div class="slider-item active">
             <img src="https://picsum.photos/id/34/1200/1000" alt="">
+            <div class="slider-content">
+                <h2>SLIDER 1</h2>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat ipsa ipsum saepe veritatis laudantium odit!
+                </p>
+            </div>
         </div>
         <div class="slider-item">
             <img src="https://picsum.photos/id/35/1200/1000" alt="">
+            <div class="slider-content">
+                <h2>SLIDER 2</h2>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat ipsa ipsum saepe veritatis laudantium odit!
+                </p>
+            </div>
         </div>
         <div class="slider-item">
             <img src="https://picsum.photos/id/36/1200/1000" alt="">
+            <div class="slider-content">
+                <h2>SLIDER 3</h2>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat ipsa ipsum saepe veritatis laudantium odit!
+                </p>
+            </div>
         </div>
         <div class="slider-item">
             <img src="https://picsum.photos/id/37/1200/1000" alt="">
+            <div class="slider-content">
+                <h2>SLIDER 4</h2>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat ipsa ipsum saepe veritatis laudantium odit!
+                </p>
+            </div>
         </div>
         <div class="slider-item">
             <img src="https://picsum.photos/id/38/1200/1000" alt="">
+            <div class="slider-content">
+                <h2>SLIDER 5</h2>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat ipsa ipsum saepe veritatis laudantium odit!
+                </p>
+            </div>
         </div>
         <div class="slider-item">
             <img src="https://picsum.photos/id/39/1200/1000" alt="">
+            <div class="slider-content">
+                <h2>SLIDER 6</h2>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat ipsa ipsum saepe veritatis laudantium odit!
+                </p>
+            </div>
         </div>
         <div class="slider-nav">
             <a href="#" class="slider-prev"><i class="fa-solid fa-chevron-left fa-2x"></i></a>
