--- a/CSS/layout-1.html
+++ b/CSS/layout-1.html
@@ -27,6 +27,13 @@
     <nav class="mobile-nav">
         <a href="#" class="nav-logo">Logo</a>
         <a href="#" class="nav-toggle"><i class="fa-solid fa-bars fa-xl"></i></a>
+        <div class="mobile-nav-menu">
+            <a href="#" class="nav-close"><i class="fa-solid fa-xmark fa-3x"></i></a>
+            <a href="#about" class="nav-link">About</a>
+            <a href="#service" class="nav-link">Service</a>
+            <a href="#folio" class="nav-link">Folio</a>
+            <a href="#" class="nav-link">Login</a>
+        </div>
     </nav>
     <header>
         <img src="https://picsum.photos/id/83/1600/1000" alt="" class="cover">
